@@ -1,14 +1,7 @@
 package com.autobots.automanager.modelos;
 
 public class StringVerificadorNulo {
-
-	public boolean verificar(String dado) {
-		boolean nulo = true;
-		if (!(dado == null)) {
-			if (!dado.isBlank()) {
-				nulo = false;
-			}
-		}
-		return nulo;
-	}
+    public boolean verificar(String valor) {
+        return valor == null || valor.trim().isEmpty();
+    }
 }
